--- a/app/views/sub_categories/edit.html.erb
+++ b/app/views/sub_categories/edit.html.erb
@@ -1,5 +1,6 @@
-<%= simple_form_for @sub_category do |f| %>
-<%= f.input :name %>
-<%= f.association :category %>
-<%= f.submit %>
-<% end %>
+<div class="container mt-5">
+  <div class="bg-white p-5">
+    <h2 class="text-center pb-4">Editar Categoria</h2>
+    <%= render 'form' %>
+  </div>
+</div>
