--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+<div class="flex-center mt-4" data-controller="counter">
+  <div class="counter">
+  </div>
+
+  <button class="btn btn-outline-secondary">Refresh counter</button>
+</div>
