--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,1 +1,6 @@
-<%= render 'form' %>
+<div class="container mt-5">
+  <div class="bg-white p-5">
+    <h2 class="text-center pb-4">Crear Producto</h2>
+    <%= render 'form' %>
+  </div>
+</div>
