--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -2,4 +2,5 @@
 <%= f.input :name %>
 <%= f.input :photo %>
 <%= f.submit class: "btn btn-primary btn-block mt-4" %>
+<%= link_to "volver", :back , class: "btn btn-secondary mt-4 text-right"%>
 <% end %>
