Add new indexes

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,6 +1,8 @@
 <%= simple_form_for @category do |f| %>
 <%= f.input :name %>
 <%= f.input :photo %>
-<%= f.submit class: "btn btn-primary btn-block mt-4" %>
-<%= link_to "volver", :back , class: "btn btn-secondary mt-4 text-right"%>
+<div class="text-right">
+  <%= f.submit class: "btn btn-primary btn-block mt-4" %>
+  <%= link_to "volver", :back , class: "btn btn-secondary mt-4 text-right"%>
+</div>
 <% end %>
