--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,5 @@
-<div class="container">
+<div class="container mt-5">
   <table class="table table-striped">
-    <% @products.each do |product| %>
     <thead>
       <tr>
         <th>Producto</th>
@@ -8,15 +7,19 @@
       </tr>
     </thead>
     <tbody>
+      <% @products.each do |product| %>
       <tr>
-        <th><%= product.name %></th>
+        <th class="font-weight-light"><%= product.name %></th>
         <td class="text-right">
           <%= link_to 'ver', product_path(product), class: "pr-2" %>
           <%= link_to 'editar', edit_product_path(product), class: "pr-2" %>
           <%= link_to 'eliminar', product_path(product),  method: :delete,  data: { confirm: 'Are you sure?' }, class: "text-danger"  %>
         </td>
       </tr>
+      <% end %>
     </tbody>
-    <% end %>
   </table>
+  <div class="text-right mt-5">
+    <%= link_to 'menu', "#", class: "btn btn-secondary"  %>
+  </div>
 </div>
