--- a/app/views/variants/_new.html.erb
+++ b/app/views/variants/_new.html.erb
@@ -2,5 +2,8 @@
 <%= f.input :size %>
 <%= f.input :stock %>
 <%= f.input :price_cents %>
-<%= f.submit class: "btn btn-primary btn-block"%>
+<div class="text-right">
+  <%= f.submit class: "btn btn-primary btn-block"%>
+  <%= link_to 'volver', products_path, class: "btn btn-secondary mt-3" %>
+</div>
 <% end %>
