--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-3">
       <% @category.sub_categories.each do |sub_category| %>
-      <%= link_to sub_category.name, sub_category_path(sub_category) %>
+      <h2><%= link_to sub_category.name, sub_category_path(sub_category) %></h2>
       <% end %>
     </div>
     <div class="col-9">
