Change product show

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,4 +26,12 @@
     </tbody>
     <% end %>
   </table>
+  <div class="product-container">
+    <div class="product-image">
+      <%= render 'carousel' %>
+    </div>
+    <div class="product content">
+      <%= render 'content' %>
+    </div>
+  </div>
 </div>
