--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,6 +3,17 @@
   <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
   <% end %>
 
+  <div class="cart-icon">
+        <% if total_cart_items %>
+        <%= link_to cart_path(@cart) do %>
+        <span class="icon is-small">
+          <i class="fas fa-shopping-bag"></i>
+        </span>
+        <span><%= cart_count_over_one %></span>
+        <% end %>
+        <% end %>
+      </div>
+
   <button class="navbar-toggler" type="button" data-toggle="modal" data-target="#navbar-modal">
     <span class="navbar-toggler-icon"></span>
   </button>
