--- a/app/views/products/_content.html.erb
+++ b/app/views/products/_content.html.erb
@@ -1,12 +1,21 @@
- <%= form_tag line_items_path do %>
- <%= hidden_field_tag 'product_id', @product.id %>
- <div class="label-size d-flex">
-  <% @product.variants.each do |variant| %>
-  <label>
-    <input type="radio" name="variant_id" value="<%= variant.id %>" checked /><%= variant.size %>
-  </label>
+ <div data-controller="radio-selector">
+
+
+   <%= form_tag line_items_path do %>
+   <%= hidden_field_tag 'product_id', @product.id %>
+   <div class="label-size d-flex">
+    <% @product.variants.each do |variant| %>
+
+    <label>
+      <input data-target="radio-selector.option" data-action="click->radio-selector#selectRadioOption" type="radio" name="variant_id" value="<%= variant.id %>" checked /><%= variant.size %>
+    </label>
+    <% end %>
+
+    <label data-target="radio-selector.input"></label>
+
+  </div>
+  <!-- cantidad the stock que hay -->
+  <%= submit_tag 'COMPRAR', class: 'btn btn-dark btn-lg btn-block' %>
   <% end %>
 </div>
-<!-- cantidad the stock que hay -->
-<%= submit_tag 'COMPRAR', class: 'btn btn-dark btn-lg btn-block' %>
-<% end %>
+
