--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <th><%= variant.size %></th>
         <td><%= variant.stock %></td>
-        <td><%= variant.price_cents %></td>
+        <td><%= humanized_money_with_symbol(variant.price) %></td>
         <td class="text-right">
           <%= link_to 'ver', variant_path(variant), class: "pr-2"  %>
           <%= link_to 'editar', edit_variant_path(variant), class: "pr-2"  %>
@@ -28,11 +28,11 @@
   </table>
 </div>
 <div class="product-container">
-  <div class="">
+  <div>
     <img src="https://www.homecollection.com.ar/pub/media/catalog/product/cache/image/1200x1200/e9c3970ab036de70892d86c6d221abfe/_/e/_ez_7998-min_1.jpg" alt="" style="width: 100%;
     object-fit: cover;">
   </div>
-  <div class="text-center px-5">
+  <div class="text-center px-3 px-md-5 pt-4 pt-md-0">
     <h2><%= @product.name %></h2>
     <hr>
     <div class="product-image-container py-4">
@@ -42,19 +42,8 @@
       <img src="https://www.homecollection.com.ar/pub/media/catalog/product/cache/image/1200x1200/e9c3970ab036de70892d86c6d221abfe/1/1/111.411.13-25_2-min.jpg" alt="">
       <img src="https://www.homecollection.com.ar/pub/media/catalog/product/cache/image/1200x1200/e9c3970ab036de70892d86c6d221abfe/1/1/111.411.13-25_2-min.jpg" alt="">
     </div>
-    <p class="px-5 pt-3">Sábana de 400 hilos, 100% algodón egipcio con bordado en forma de cadena. Vienen 3 o 4 piezas según el tamaño elegido: Sábana ajustable, Sábana plana y una o dos fundas de almohada.</p>
+    <p class="px-2 px-md-5 pt-3">Sábana de 400 hilos, 100% algodón egipcio con bordado en forma de cadena. Vienen 3 o 4 piezas según el tamaño elegido: Sábana ajustable, Sábana plana y una o dos fundas de almohada.</p>
     <%= render 'content' %>
   </div>
 </div>
 
-<style>
-  .product-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  .product-image-container img {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-  }
-</style>
