--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,88 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<div class="flex-center mt-4" data-controller="counter">
-  <div class="counter">
+<div class="banner d-flex align-items-center" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1578683010236-d716f9a3f461?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
+  <div class="container">
+    <h1>COTTON HOME</h1>
+    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <a class="btn btn-flat" href="#">Apply now</a>
   </div>
-
-  <button class="btn btn-outline-secondary">Refresh counter</button>
+</div>
+<div class="home-cards">
+  <div class="column">
+    <% @categories.where(name: "Habitación").each do |category| %>
+    <%= link_to category_path(category) do  %>
+    <div class="card-category-1" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(<%= category.photo %>)">
+      <div class="text-center">
+        <h2><%= category.name.upcase %></h2>
+        <button class="home-button">VER MAS</button>
+      </div>
+    </div>
+    <% end %>
+    <% end %>
+    <% @categories.where(name: "Cocina").each do |category| %>
+    <%= link_to category_path(category) do  %>
+    <div class="card-category-2" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(<%= category.photo %>)">
+      <div class="text-center">
+        <h2><%= category.name.upcase %></h2>
+        <button class="home-button">VER MAS</button>
+      </div>
+    </div>
+    <% end %>
+    <% end %>
+  </div>
+  <div class="column">
+    <% @categories.where(name: "Living").each do |category| %>
+    <%= link_to category_path(category) do  %>
+    <div class="card-category-2" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(<%= category.photo %>)">
+      <div class="text-center">
+        <h2><%= category.name.upcase %></h2>
+        <button class="home-button">VER MAS</button>
+      </div>
+    </div>
+    <% end %>
+    <% end %>
+    <% @categories.where(name: "Habitación").each do |category| %>
+    <%= link_to category_path(category) do  %>
+    <div class="card-category-1" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(<%= category.photo %>)">
+      <div class="text-center">
+        <h2><%= category.name.upcase %></h2>
+        <button class="home-button">VER MAS</button>
+      </div>
+    </div>
+    <% end %>
+    <% end %>
+  </div>
+</div>
+<div class="container">
+  <div class="text-center">
+    <h2 class="pt-5">Mas vendidos</h2>
+    <p class="pb-5">Renovate elegi nuestros productos mas vendidos</p>
+  </div>
+  <div class="products-home-cards">
+    <div class="card" style="width: 100%;">
+      <img src="https://www.homecollection.com.ar/pub/media/catalog/product/cache/image/1200x1200/e9c3970ab036de70892d86c6d221abfe/_/a/_a0a5855-min.jpg" class="card-img-top" alt="..." style="width: 100%;
+      height: 350px;">
+      <div class="card-body text-center">
+        <h5 class="card-title">Sabanas 300</h5>
+        <p class="card-text">$ 5000</p>
+        <hr>
+      </div>
+    </div>
+    <div class="card" style="width: 100%;">
+      <img src="https://www.homecollection.com.ar/pub/media/catalog/product/cache/image/1200x1200/e9c3970ab036de70892d86c6d221abfe/_/a/_a0a5855-min.jpg" class="card-img-top" alt="..." style="width: 100%;
+      height: 350px;">
+      <div class="card-body text-center">
+        <h5 class="card-title">Sabanas 300</h5>
+        <p class="card-text">$ 5000</p>
+        <hr>
+      </div>
+    </div>
+    <div class="card" style="width: 100%;">
+      <img src="https://www.homecollection.com.ar/pub/media/catalog/product/cache/image/1200x1200/e9c3970ab036de70892d86c6d221abfe/_/a/_a0a5855-min.jpg" class="card-img-top" alt="..." style="width: 100%;
+      height: 350px;">
+      <div class="card-body text-center">
+        <h5 class="card-title">Sabanas 300</h5>
+        <p class="card-text">$ 5000</p>
+        <hr>
+      </div>
+    </div>
+  </div>
 </div>
