Change category and subcategories pages

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -28,9 +28,8 @@
   </table>
 </div>
 <div class="product-container">
-  <div>
-    <img src="https://www.homecollection.com.ar/pub/media/catalog/product/cache/image/1200x1200/e9c3970ab036de70892d86c6d221abfe/_/e/_ez_7998-min_1.jpg" alt="" style="width: 100%;
-    object-fit: cover;">
+  <div class="product-image">
+    <%= render 'carousel' %>
   </div>
   <div class="text-center px-3 px-md-5 pt-4 pt-md-0">
     <h2><%= @product.name %></h2>
