--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -19,4 +19,18 @@
   }
 }
 
+.category-banner {
+  margin-top: 70px;
+  background-size: cover;
+  background-position: center;
+  height: 38vh;
+
+  h1 {
+    margin: 0;
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    font-size: 30px;
+    font-weight: bold;
+  }
+}
 
