--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -4,6 +4,21 @@
   grid-template-columns: 1fr 1fr;
 }
 
+//carousel
+.product-image {
+  img {
+    width: 100%;
+    height: 700px;
+    object-fit: cover;
+  }
+}
+
+.carousel-control-next,
+.carousel-control-prev {
+  filter: invert(100%);
+}
+
+//second part
 .product-image-container img {
   width: 100px;
   height: 100px;
@@ -18,6 +33,9 @@
   font-weight: bold;
   margin: 0 auto;
 }
+
+
+
 
 
 @media(max-width: 700px) {
