--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,14 +1,17 @@
-<div class="container">
-  <div class="row">
-    <div class="col-3">
-      <% @category.sub_categories.each do |sub_category| %>
-      <h2><%= link_to sub_category.name, sub_category_path(sub_category) %></h2>
-      <% end %>
-    </div>
-    <div class="col-9">
-      <% @products.each do |product| %>
-      <%= product.name %>
-      <% end %>
-    </div>
+<div class="category-banner d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= @category.photo %>);">
+  <div>
+    <h1><%= @category.name %></h1>
+  </div>
+</div>
+<div class="categories">
+  <div class="d-flex justify-content-center py-5">
+    <% @category.sub_categories.each do |sub_category| %>
+    <h5><%= link_to sub_category.name, sub_category_path(sub_category), class: "pl-3 text-body" %></h5>
+    <% end %>
+  </div>
+  <div class="container" id="category-container">
+    <% @products.each do |product| %>
+      <%= render 'shared/product_card', product: product %>
+    <% end %>
   </div>
 </div>
