--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -57,32 +57,8 @@
     <p class="pb-5">Renovate elegi nuestros productos mas vendidos</p>
   </div>
   <div class="products-home-cards">
-    <div class="card" style="width: 100%;">
-      <img src="https://www.homecollection.com.ar/pub/media/catalog/product/cache/image/1200x1200/e9c3970ab036de70892d86c6d221abfe/_/a/_a0a5855-min.jpg" class="card-img-top" alt="..." style="width: 100%;
-      height: 350px;">
-      <div class="card-body text-center">
-        <h5 class="card-title">Sabanas 300</h5>
-        <p class="card-text">$ 5000</p>
-        <hr>
-      </div>
-    </div>
-    <div class="card" style="width: 100%;">
-      <img src="https://www.homecollection.com.ar/pub/media/catalog/product/cache/image/1200x1200/e9c3970ab036de70892d86c6d221abfe/_/a/_a0a5855-min.jpg" class="card-img-top" alt="..." style="width: 100%;
-      height: 350px;">
-      <div class="card-body text-center">
-        <h5 class="card-title">Sabanas 300</h5>
-        <p class="card-text">$ 5000</p>
-        <hr>
-      </div>
-    </div>
-    <div class="card" style="width: 100%;">
-      <img src="https://www.homecollection.com.ar/pub/media/catalog/product/cache/image/1200x1200/e9c3970ab036de70892d86c6d221abfe/_/a/_a0a5855-min.jpg" class="card-img-top" alt="..." style="width: 100%;
-      height: 350px;">
-      <div class="card-body text-center">
-        <h5 class="card-title">Sabanas 300</h5>
-        <p class="card-text">$ 5000</p>
-        <hr>
-      </div>
-    </div>
+    <% @products.last(3).each do |product| %>
+      <%= render 'shared/product_card', product: product %>
+    <% end %>
   </div>
 </div>
