--- a/app/views/sub_categories/show.html.erb
+++ b/app/views/sub_categories/show.html.erb
@@ -1,13 +1,19 @@
-<div class="container">
-  <div class="row">
-    <div class="col-3">
-      <% @sub_categories.each do |sub_category| %>
-      <h2><%= link_to sub_category.name, sub_category_path(sub_category) %></h2>
+<div class="sub-categories">
+  <div class="container">
+    <div class="d-flex justify-content-center py-4">
+      <% category_name =  @sub_category.category.name %>
+      <% sub_category_links = @sub_categories.filter { |sub_category| sub_category.category.name == category_name } %>
+      <% sub_category_links.each do |g| %>
+      <%= link_to sub_category_path(g) do  %>
+      <h5 class="pl-3 text-body"><%= g.name %></h5>
+      <% end %>
       <% end %>
     </div>
-    <div class="col-9">
+    <h3 class="text-center font-weight-bold py-3"><%= @sub_category.name %></h3>
+    <hr>
+    <div id="category-container">
       <% @sub_category.products.each do |product| %>
-      <%= product.name %>
+      <%= render 'shared/product_card', product: product %>
       <% end %>
     </div>
   </div>
