--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,18 +1,8 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
-  <%= link_to "#", class: "navbar-brand" do %>
-  <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+  <%= link_to root_path, class: "navbar-brand" do %>
+  <h5 class="font-weight-bold mb-0">COTTON</h5>
+  <h5 class="font-weight-bold">HOME</h5>
   <% end %>
-
-  <div class="cart-icon">
-    <% if total_cart_items %>
-    <%= link_to cart_path(@cart) do %>
-    <span class="icon is-small">
-      <i class="fas fa-shopping-bag"></i>
-    </span>
-    <span><%= cart_count_over_one %></span>
-    <% end %>
-    <% end %>
-  </div>
 
   <button class="navbar-toggler" type="button" data-toggle="modal" data-target="#navbar-modal">
     <span class="navbar-toggler-icon"></span>
@@ -33,7 +23,19 @@
       <% end %>
     </ul>
   </div>
+  <div class="cart-icon">
+    <% if total_cart_items %>
+    <%= link_to cart_path(@cart) do %>
+    <span class="icon is-small">
+      <i class="fas fa-shopping-bag"></i>
+    </span>
+    <span><%= cart_count_over_one %></span>
+    <% end %>
+    <% end %>
+  </div>
 </div>
+
+
 
 
 <!-- Modal -->
