--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,68 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  width: 100%;
+  .navbar-toggler {
+    border: transparent;
+    &:focus {
+      outline: none;
+    }
+  }
+
+  .nav-item {
+    color: black ;
+    padding-left: 10px;
+  }
+  .nav-link {
+    color: black !important;
+    font-size: 17px;
+    &:hover {
+      color: lightgrey !important;
+    }
+
+  }
+
+  .navbar-brand {
+    margin-right: 0px;
+  }
 }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+// the mobile right part
+.cart-item-lg {
+  margin-right: 10px;
+  a {
+   color: black;
+ }
+}
+
+.magnify {
+  width: 54px;
+  a {
+    text-decoration: none;
+  }
+}
+.cart-item {
+  font-size: 16px;
+  margin-left: -30px;
+  i {
+    color: black;
+    font-size: 24px;
+  }
+  a {
+    color: black;
+  }
+
+}
+
+// full size search
+.cart-search{
+  font-size: 22px;
+  margin-left: 6px;
+   a {
+    color: black;
+  }
 }
