--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,13 +39,6 @@
       <%= link_to category.name, category_path(category), class: "nav-link" %>
     </li>
     <% end %>
-    <li class="nav-item d-lg-none">
-      <% if user_signed_in? %>
-      <%= link_to "Perfil", "#", class: "nav-link" %>
-      <% else %>
-      <%= link_to "Iniciar sesión", new_user_session_path, class: "nav-link" %>
-      <% end %>
-    </li>
   </ul>
 </div>
 <div class="d-none d-lg-block">
@@ -66,7 +59,7 @@
       <i class="fas fa-search" style="color: black; font-size: 24px;"></i>
       <% end %>
       <% if user_signed_in? %>
-      <%= link_to "#" do%>
+      <%= link_to user_path(current_user) do%>
       <i class="fas fa-user" style="color: black; margin-left: 8px;font-size: 24px;"></i>
       <% end %>
       <% else %>
@@ -84,7 +77,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="navbar-modal" tabindex="-1" role="dialog" aria-labelledby="navbar-modalTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable w-100 m-0 h-75" role="document">
+  <div class="modal-dialog modal-dialog-scrollable w-100 m-0 h-100" role="document">
     <div class="modal-content">
       <div class="modal-header border-0">
         <button type="button" class="modal-close border-0 bg-white" data-dismiss="modal" aria-label="Close">
@@ -102,13 +95,6 @@
           <%= link_to category.name, category_path(category), class: "nav-link" %>
         </li>
         <% end %>
-        <% if user_signed_in? %>
-        <%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete%>
-        <% else %>
-        <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-        </li>
-        <% end %>
       </ul>
       <div class="pt-5">
         <h6 class="font-weight-bold mb-3">Conoce mas sobre Cotton</h6>
@@ -116,8 +102,12 @@
         <p class="mb-2">Quienes somos?</p>
       </div>
     </div>
-    <div class="px-4 pb-4 border-secondary mt-3 text-center">
-      <p><%= link_to 'Menu','#', class: "btn btn-success btn-block rounded-pill py-2 text-white" %></p>
+    <div class="px-4 pb-5 border-secondary mt-3 text-center">
+      <% if user_signed_in? %>
+      <p><%= link_to 'Menu',user_path(current_user), class: "btn btn-success btn-block rounded-pill py-2 text-white" %></p>
+      <% else %>
+      <p><%= link_to 'Iniciar sesión', new_user_session_path, class: "btn btn-success btn-block rounded-pill py-2 text-white" %></p>
+      <% end %>
       <%= link_to 'Carrito','#', class: "btn btn-dark btn-block rounded-pill py-2" %>
     </div>
   </div>
