--- a/app/views/sub_categories/index.html.erb
+++ b/app/views/sub_categories/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container mt-5">
-  <table class="table table-striped">
+<div class="container pt-5">
+  <table class="table table-striped mt-5">
     <thead>
       <tr>
         <th>Categorias</th>
@@ -24,6 +24,6 @@
     </tbody>
   </table>
   <div class="text-right mt-5">
-    <%= link_to 'menu', "#", class: "btn btn-secondary"  %>
+    <%= link_to 'volver', :back, class: "btn btn-secondary"  %>
   </div>
 </div>
