--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container mt-5">
-  <table class="table table-striped">
+<div class="container pt-5">
+  <table class="table table-striped mt-5">
     <thead>
       <tr>
         <th>Categoria Principal</th>
