--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container mt-5">
-  <table class="table table-striped">
+<div class="container pt-5">
+  <table class="table table-striped mt-5">
     <thead>
       <tr>
         <th>Producto</th>
@@ -22,6 +22,9 @@
     </tbody>
   </table>
   <div class="text-right mt-5">
-    <%= link_to 'menu', "#", class: "btn btn-secondary"  %>
+    <%= link_to 'volver', :back, class: "btn btn-secondary" %>
+  </div>
+  <div class="d-flex justify-content-center">
+    <%= will_paginate @users, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
   </div>
 </div>
