--- a/app/views/sub_categories/new.html.erb
+++ b/app/views/sub_categories/new.html.erb
@@ -1,5 +1,5 @@
-<div class="container mt-5">
-  <div class="bg-white p-5">
+<div class="container pt-5">
+  <div class="bg-white p-5 mt-5">
     <h2 class="text-center pb-4">Crear Categoria</h2>
     <%= render 'form' %>
   </div>
