Finish cart and user show

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,10 +1,9 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "navbar";
 @import "banner";
 @import "card";
+@import "footer";
+@import "line_items";
 @import "modal";
-
-
-
+@import "navbar";
