--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
-<div class="container my-5 ">
-  <div class="bg-white p-5">
-    <h2 class="text-center pb-4">Completar <%= @product.name %></h2>
+<div class="container my-5">
+  <div class="bg-white p-5 ">
+    <h2 class="text-center pb-4 pt-5">Completar <%= @product.name %></h2>
     <%= render "variants/new" %>
   </div>
   <table class="table table-striped mt-3">
