--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "font-awesome";
 
 // Your CSS partials
+@import "carts/index";
 @import "categories/index";
 @import "components/index";
 @import "pages/index";
