--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="keep-shopping">
+<div class="keep-shopping pt-5">
   <h2><i class="fas fa-shopping-bag"></i> Carrito de Compras</h2>
   <p><%= link_to 'X', root_path %></p>
 </div>
