Add metadata for websites

--- a/app/views/users/_orders.html.erb
+++ b/app/views/users/_orders.html.erb
@@ -1,1 +1,28 @@
-algo
+<!--  <head>
+    <title>Cooking Service - Las bandejas de Claudia Sempé</title>
+    <%= favicon_link_tag(source = "favicon.ico") %>
+    <meta name="title" content="Cooking Service - Las bandejas de Claudia Sempé">
+    <meta name="description" content="Cooking Service es la mejor manera de comer saludable a través de un menu personalizado a tus gustos. Cooking Service es el servicio de comidas premium y a domicilio de la Lic. Claudia Sempé.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.cookingservice.ar/">
+    <meta property="og:title" content="Cooking Service - Las bandejas de Claudia Sempé">
+    <meta property="og:description" content="Cooking Service es la mejor manera de comer saludable a través de un menu personalizado a tus gustos. Cooking Service es el servicio de comidas premium y a domicilio de la Lic. Claudia Sempé.">
+    <meta property="og:image" content="<%= asset_path('CSOG.png') %>">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.cookingservice.ar/">
+    <meta property="twitter:title" content="Cooking Service - Las bandejas de Claudia Sempé">
+    <meta property="twitter:description" content="Cooking Service es la mejor manera de comer saludable a través de un menu personalizado a tus gustos. Cooking Service es el servicio de comidas premium y a domicilio de la Lic. Claudia Sempé.">
+    <meta property="twitter:image" content="<%= asset_path('CSOG.png') %>">
+
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&key=#{ENV['GOOGLE_API_BROWSER_KEY']}" %>
+
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+  </head> -->
