--- a/app/views/variants/new.html.erb
+++ b/app/views/variants/new.html.erb
@@ -7,7 +7,7 @@
     <%= f.input :price_cents %>
     <div class="text-right">
       <%= f.submit class: "btn btn-primary btn-block mt-4" %>
-      <%= link_to "volver", :back , class: "btn btn-secondary mt-4"%>
+      <%= link_to "volver", product_path(@product) , class: "btn btn-secondary mt-4"%>
     </div>
     <% end %>
   </div>
