--- a/app/views/products/_content.html.erb
+++ b/app/views/products/_content.html.erb
@@ -14,6 +14,9 @@
     <% end %>
     <% end %>
   </div>
+  <h6 type="button" class="badge badge-primary btn-sm h6", data-toggle="modal", data-target="#ModalSize">
+    Guía de Medidas
+  </h6>
   <hr>
   <div class="d-flex justify-content-around px-3 px-md-5 py-3">
     <div class="">
@@ -28,4 +31,28 @@
     </div>
   </div>
   <% end %>
+</div>
+
+
+<div class="modal fade" id="ModalSize" tabindex="-1" role="dialog" aria-labelledby="ModalSizeTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="ModalSizeTitle">Guía de Medidas</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body text-left">
+        <h3 class="bg-secondary h5 py-2 px-1 font-weight-bold">Cuna</h3>
+        <p>Para colchón de hasta 0.60 m de ancho x 1.20 m de largo x 0.20 m de alto.</p>
+        <h3 class="bg-secondary h5 py-2 px-1 font-weight-bold">Twin Size</h3>
+        <p>Para colchón de hasta 1 m de ancho x 2 m de largo x 0.25 m de alto.</p>
+        <h3 class="bg-secondary h5 py-2 px-1 font-weight-bold">Queen Size</h3>
+        <p>Para colchón de hasta 1.50 m de ancho x 1.90 m de largo x 0.25 m de alto.</p>
+        <h3 class="bg-secondary h5 py-2 px-1 font-weight-bold">King Size</h3>
+        <p>Para colchón de hasta 2 m de ancho x 2 m de largo x 0.35 m de alto</p>
+      </div>
+    </div>
+  </div>
 </div>
