--- a/app/assets/stylesheets/components/_line_items.scss
+++ b/app/assets/stylesheets/components/_line_items.scss
@@ -1,18 +1,18 @@
 .line-wrapper {
   display: flex;
+  align-items: justify-center;
   padding: 20px;
   border-bottom: 1px solid;
   border-color: grey;
 }
 
 .line-image {
-  padding-right: 10px;
-  border-radius: 6px;
+  padding-right: 16px;
   img {
-    width: 200px;
+    border-radius: 6px;
+    width: 300px;
     height: 200px;
     object-fit: cover;
-
   }
 }
 
@@ -61,13 +61,21 @@
   }
 }
 
-@media(max-width: 600px) {
+@media (max-width: 767.98px) {
+  .line-wrapper {
+    display: block;
+  }
+
   .line-image {
+    padding-right: 0px;
+    margin-bottom: 16px;
     img {
-      width: 100px;
-      height: 100px;
+      width: 100%;
+      height: 200px;
     }
   }
 }
+
+
 
 
