--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,9 +1,11 @@
-<div class="line-wrapper">
+<div class="d-none d-lg-block"id="<%= line_item.id %>" style="height:50px;">
+</div>
+<div class="line-wrapper py-3 py-md-5" >
   <div class="line-image">
     <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="">
   </div>
-  <div class="line-content">
-    <h2><%= line_item.product.name %></h2>
+  <div class="line-content pb-md-5">
+    <h2 ><%= line_item.product.name %></h2>
     <h3 class="mt-3"><strong>TALLE:</strong> <%= line_item.variant.size %></h3>
     <div class="d-flex align-items-center py-2">
       <div class="mr-3">
@@ -11,13 +13,14 @@
       </div>
       <div class="increase">
         <% stock = line_item.variant.stock - 1 %>
+        <%= stock %>
         <% if line_item.quantity > 1 && line_item.quantity <= stock %>
-        <td><%= link_to "+", increase_line_item_path(line_item), class:"badge badge-primary" %></td>
-        <td><%= link_to "-", decrease_line_item_path(line_item), class:"badge badge-primary" %></td>
-        <% elsif line_item.quantity > 5 %>
-        <td><%= link_to "-", decrease_line_item_path(line_item), class:"badge badge-primary" %></td>
+        <td><%= link_to "+", increase_line_item_path(line_item),  method: :patch, remote: true, class:"badge badge-primary" %></td>
+        <td><%= link_to "-", decrease_line_item_path(line_item), method: :patch, remote: true, class:"badge badge-primary" %></td>
+        <% elsif line_item.quantity > stock  %>
+        <td><%= link_to "-", decrease_line_item_path(line_item), method: :patch, remote: true, class:"badge badge-primary" %></td>
         <% else %>
-        <td><%= link_to "+", increase_line_item_path(line_item), class:"badge badge-primary" %></td>
+        <td><%= link_to "+", increase_line_item_path(line_item), method: :patch, remote: true, class:"badge badge-primary" %></td>
         <% end %>
       </div>
     </div>
