--- a/app/assets/stylesheets/categories/_show.scss
+++ b/app/assets/stylesheets/categories/_show.scss
@@ -1,10 +1,26 @@
+
 #category-container {
   display: grid;
   grid-template-columns: 1fr  1fr 1fr 1fr;
   grid-gap: 16px;
 }
 
-
 .sub-categories {
   margin-top: 100px;
+}
+
+@media (max-width: 991.98px) {
+  #category-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
+ }
+
+@media(max-width: 575.98px) {
+  #category-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 8px;
+}
 }
