--- a/app/views/sub_categories/show.html.erb
+++ b/app/views/sub_categories/show.html.erb
@@ -1,11 +1,11 @@
 <div class="sub-categories">
   <div class="container">
-    <div class="d-flex justify-content-center py-4">
+    <div class="d-md-flex justify-content-center py-2 py-md-3 text-center px-3 px-md-0">
       <% category_name =  @sub_category.category.name %>
       <% sub_category_links = @sub_categories.filter { |sub_category| sub_category.category.name == category_name } %>
       <% sub_category_links.each do |g| %>
       <%= link_to sub_category_path(g) do  %>
-      <h5 class="pl-3 text-body"><%= g.name %></h5>
+      <h5 class="py-2 py-md-3 mb-0 border-bottom pl-md-3 text-body"><%= g.name %></h5>
       <% end %>
       <% end %>
     </div>
