--- a/app/views/products/_content.html.erb
+++ b/app/views/products/_content.html.erb
@@ -2,11 +2,11 @@
   <%= form_tag line_items_path do %>
   <%= hidden_field_tag 'product_id', @product.id %>
   <div class="label-size d-flex justify-content-center">
-    <% @product.variants.each_with_index do |variant, index| %>
+    <% @product.variants.each do |variant| %>
     <% unless variant.stock <= 0 %>
     <div class="form-check py-4">
-      <input class="form-check-input d-none" type="radio" name="variant_id" id="<%= index + 1 %>" value="<%= variant.id %>" checked>
-      <label data-target="radio-selector.option" data-action="click->radio-selector#selectRadioOption" class="form-check-label btn btn-outline-success" for="<%= index + 1 %>" >
+      <input class="form-check-input d-none" type="radio" name="variant_id" value="<%= variant.id %>" checked>
+      <label data-target="radio-selector.option" data-action="click->radio-selector#selectRadioOption" class="form-check-label btn btn-outline-success" >
         <%= humanized_money_with_symbol(variant.price) %>
         <%= variant.size %>
       </label>
@@ -20,7 +20,7 @@
   <hr>
   <div class="d-flex justify-content-around px-3 px-md-5 py-3">
     <div class="">
-      <input data-target="radio-selector.input"  disabled id="price">
+      <input data-target="radio-selector.input" id="price">
     </div>
     <div class="flex-grow-1">
       <% if @product.variants(&:stock).count <= 0 %>
