--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -8,19 +8,15 @@
     <h2 ><%= line_item.product.name %></h2>
     <h3 class="mt-3"><strong>TALLE:</strong> <%= line_item.variant.size %></h3>
     <div class="d-flex align-items-center py-2">
-      <div class="mr-3">
-        <span class="btn btn-outline-dark disabled py-2 px-4"><%= line_item.quantity %></span>
-      </div>
-      <div class="increase">
-        <% stock = line_item.variant.stock - 1 %>
-        <%= stock %>
-        <% if line_item.quantity > 1 && line_item.quantity <= stock %>
-        <td><%= link_to "+", increase_line_item_path(line_item),  method: :patch, remote: true, class:"badge badge-primary" %></td>
-        <td><%= link_to "-", decrease_line_item_path(line_item), method: :patch, remote: true, class:"badge badge-primary" %></td>
-        <% elsif line_item.quantity > stock  %>
-        <td><%= link_to "-", decrease_line_item_path(line_item), method: :patch, remote: true, class:"badge badge-primary" %></td>
-        <% else %>
-        <td><%= link_to "+", increase_line_item_path(line_item), method: :patch, remote: true, class:"badge badge-primary" %></td>
+      <div class="increase" data-controller="remote">
+        <%= simple_form_for line_item, remote: true do |f| %>
+        <% numbers = (1..20) %>
+        <% stock = numbers.select do |number| %>
+        <% product_stock = line_item.variant.stock %>
+        <%  number <= product_stock %>
+        <% end %>
+        <%= f.input :quantity, :collection =>  stock, label: false , input_html: { "data-action": "change->remote#submitForm", class: "btn btn-outline-dark py-2 px-2" } %>
+        <input type="submit" value="Submit" data-target="remote.submit" class="d-none">
         <% end %>
       </div>
     </div>
