Finish order show style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "carts/index";
 @import "categories/index";
 @import "components/index";
+@import "orders/index";
 @import "pages/index";
 @import "products/index";
 @import "users/index";
